--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1329,3 +1329,129 @@ a {
     font-family: "\5FAE\8F6F\96C5\9ED1";
     src:local('Microsoft YaHei');
 }
+
+.danmaku-send-dialog-layer {
+    position: fixed;
+    top: 0;
+    width: 800px;
+    margin-left: calc((100vw - 800px) / 2);
+    margin-top: 30vh;
+    transition: background 0.15s ease-in-out;
+}
+
+.danmaku-send-dialog {
+    position: relative;
+}
+
+.danmaku-send-dialog .exit-btn {
+    position: absolute;
+    right: -25px;
+    top: 6px;
+    z-index: 18;
+    width: 30px;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    user-select: none;
+    background: #FFF;
+    display: block;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.02);
+    transition: .2s;
+    border: 1px solid #efefef;
+}
+
+.danmaku-send-dialog .exit-btn:hover {
+    color: #00a1d6;
+    width: 40px;
+    right: -36px;
+}
+
+.danmaku-send-dialog .danmaku-send-form {
+    position: relative;
+    display: flex;
+    z-index: 19;
+    flex-direction: row;
+    align-items: center;
+    background-color: #fff;
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.02);
+    border: 1px solid #efefef;
+}
+
+.danmaku-send-dialog .danmaku-send-form .danmaku-style-btn {
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    width: 45px;
+    transition: .2s;
+    cursor: pointer;
+    user-select: none;
+}
+
+.danmaku-send-dialog .danmaku-send-form .danmaku-style-btn:hover {
+    color: #00a1d6;
+}
+
+.danmaku-send-dialog .danmaku-send-form .danmaku-msg-input {
+    flex: 1;
+    border: 0;
+    height: 38px;
+    box-sizing: border-box;
+    padding: 0;
+    background: transparent;
+    font-size: 13px;
+    color: #6b6b6b;
+    outline: none;
+    margin-left: 5px;
+}
+
+.danmaku-send-dialog .danmaku-send-form .danmaku-send-btn {
+    height: 28px;
+    margin: 0 20px;
+    padding: 0 10px 0 14px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 2px;
+    background-color: #00a1d6;
+    border: 1px solid #00a1d6;
+    transition: .2s;
+    transition-property: background-color,border,color;
+    outline: none;
+}
+
+.danmaku-send-dialog .color-selector {
+    display: none;
+}
+
+.danmaku-send-dialog .color-selector.selector-show {
+    display: block;
+    margin-top: -1px;
+    height: 100px;
+    padding: 12px 20px;
+    width: 360px;
+    background: #FFF;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    transition: all .3s ease-in-out;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.02);
+    border: 1px solid #efefef;
+    overflow-y: auto;
+}
+
+.danmaku-send-dialog .color-selector .color-block-item {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    display: inline-block;
+    border: 1px solid #F4F4F4;
+    cursor: pointer;
+    user-select: none;
+}
+
+.danmaku-send-dialog .color-selector .color-block-item.color-selected {}
