--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1430,28 +1430,30 @@ a {
 
 .danmaku-send-dialog .color-selector.selector-show {
     display: block;
-    margin-top: -1px;
-    height: 100px;
+    margin-top: -3px;
     padding: 12px 20px;
-    width: 360px;
+    width: 282px;
     background: #FFF;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     transition: all .3s ease-in-out;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.02);
     border: 1px solid #efefef;
-    overflow-y: auto;
 }
 
 .danmaku-send-dialog .color-selector .color-block-item {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 4px;
+    margin-left: 4px;
     display: inline-block;
-    border: 1px solid #F4F4F4;
+    border: 2px solid #F4F4F4;
     cursor: pointer;
     user-select: none;
+    transition: .2s;
 }
 
-.danmaku-send-dialog .color-selector .color-block-item.color-selected {}
+.danmaku-send-dialog .color-selector .color-block-item.color-selected {
+    border: 4px solid #dedede;
+}
