--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@ html {
 body {
     font-family: "Helvetica Neue", "PingFangSC-Light", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
     color: #535f6f;
-    background-color: #eff3f5;
+    background-color: #f5f8fb;
     min-width: 1200px;
 }
 
@@ -175,7 +175,8 @@ a {
 }
 
 /* main-login */
-.main-login {}
+.main-login {
+}
 
 .main.large-size .main-login {
     display: none;
@@ -183,6 +184,7 @@ a {
 
 .main-login-head {
     background: #FFF;
+    border-bottom: 1px solid #f5f5f5;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
     position: relative;
     height: 100px;
@@ -199,7 +201,7 @@ a {
 }
 
 .main-login-head .project-name {
-    color: #2196f3;
+    color: #0083ff;
     font-size: 30px;
 }
 
@@ -211,13 +213,12 @@ a {
 
 .main-login-form {
     z-index: 3;
-    position: absolute;
     width: 100%;
     overflow: hidden;
     padding: 30px 40px;
     background: #FFF;
     transition: transform .3s ease-out 0ms;
-    box-shadow: 0 1px 5px rgba(84, 84, 84, 0.2);
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
 }
 
 .main-login-form .input-hint {
@@ -232,22 +233,30 @@ a {
     outline: none !important;
     border-radius: 0;
     border: 0;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid #EEE;
     box-shadow: none;
-    color: #777;
+    color: #0083ff;
     text-align: center;
+    font-size: 15px;
+    padding: 20px 12px;
 }
 
 .main-login-form .form-control:focus {
-    border-bottom: 1px solid #2196f3;
+    border-bottom: 1px solid #0083ff;
+}
+
+.main-login-form .form-actions {
+    margin-top: 25px;
 }
 
 .main-login-form .login-submit {
-    margin-top: 25px;
+    display: inline-block;
     float: right;
-    padding: 7px 35px;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 35px;
     border: 1px solid transparent;
-    background: #2196f3;
+    background: #0083ff;
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.12);
     box-shadow: 0 1px 3px rgba(0,0,0,.12);
     color: #FFF;
@@ -268,6 +277,7 @@ a {
     display: none;
     position: relative;
     padding-top: 75px;
+    padding-bottom: 20px;
     margin: 0 auto;
     border-radius: 2px;
     width: 100%;
@@ -279,12 +289,11 @@ a {
 
 .main-category-list-head {
     position: fixed;
-    display: block;
+    display: flex;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 990;
-    overflow: hidden;
     height: 55px;
     background: #FFF;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
@@ -293,7 +302,8 @@ a {
 }
 
 .main-category-list-head .left-part {
-    display: inline-block;
+    display: flex;
+    flex: 1;
     height: 55px;
     line-height: 55px;
     padding: 0 25px;
@@ -301,16 +311,13 @@ a {
 }
 
 .main-category-list-head .title {
-    display: inline-block;
-    color: #2196F3;
+    color: #0083ff;
     padding-right: 20px;
     margin-right: 30px;
     border-right: 1px solid #eff3f5;
 }
 
-.main-category-list-head .user {
-    display: inline-block;
-}
+.main-category-list-head .user {}
 
 .main-category-list-head .user > a {
     font-size: 13px;
@@ -323,12 +330,12 @@ a {
 }
 
 .main-category-list-head .user > a:hover {
-    color: #2196f3;
+    color: #0083ff;
 }
 
 .main-category-list-head .user > a:before {
     font-family: 'Material-Design-Iconic-Font';
-    color: #5fa3ff;
+    color: #0083ff;
     margin-right: 10px;
 }
 
@@ -349,36 +356,53 @@ a {
 }
 
 .main-category-list-head .right-part {
-    display: inline-block;
-    float: right;
+    display: flex;
+    text-align: right;
     margin: 0 auto;
 }
 
 .main-category-list-head .list-search {
     vertical-align: top;
+    position: relative;
+    height: 55px;
+    overflow: hidden;
+}
+
+.main-category-list-head .list-search > i {
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    height: 55px;
+    line-height: 55px;
+    width: 45px;
+    text-align: center;
+    pointer-events: none;
 }
 
 .main-category-list-head .list-search > .form-control {
-    display: inline;
+    display: inline-block;
     border: 0;
     box-shadow: none;
-    padding: 0 25px;
+    padding: 0 35px 0 40px;
     background: transparent;
     border-radius: 2px;
     height: 55px;
     transition: background 0.15s ease, width 0.15s ease;
-    width: 190px;
+    width: 140px;
+    text-align: center;
+    border-right: 1px solid #eff3f5;
 }
 
 .main-category-list-head .list-search > .form-control:focus {
-    color: #2196F3;
+    color: #0083ff;
     background: #f7f7f7;
     width: 200px;
 }
 
 .main-category-list-head .list-actions {
-    display: inline-block;
-    height: 40px;
+    flex: 1;
+    height: 55px;
     vertical-align: top;
 }
 
@@ -397,7 +421,7 @@ a {
 }
 
 .main-category-list-head .list-actions > a:hover {
-    color: #2196F3;
+    color: #0083ff;
     background: #f7f7f7;
 }
 
@@ -426,7 +450,7 @@ a {
     height: 120px;
     overflow: hidden;
     margin-bottom: 10px;
-    border-radius: 2px;
+    border-radius: 3px;
 }
 
 .main-category-list-content .item-inner:hover {
@@ -444,13 +468,12 @@ a {
 }
 
 .main-category-list-content .item .item-head .category-name {
-    color: #5cacf7;
+    color: #0083ff;
     transition: color 0.15s ease-in-out;
     display: block;
 }
 
 .main-category-list-content .item .item-head:hover .category-name {
-    color: #008eff;
 }
 
 .main-category-list-content .item .item-meta {
@@ -459,21 +482,20 @@ a {
 
 .main-category-list-content .item .item-meta > a {
     cursor: pointer;
-    color: #999;
+    color: #8399a5;
 }
 
 .main-category-list-content .item .item-meta > a:hover {
-    color: #5fa3ff;
+    color: #0083ff;
 }
 
 .main-category-list-content .item .item-meta > a:not(:last-child) {
     padding-right: 10px;
     margin-right: 10px;
-    border-right: 1px solid #eff3f5;
 }
 
 .main-category-list-content .item .item-meta > a > i {
-    color: #5fa3ff;
+    color: #47a5ff;
     font-style: normal;
     margin-right: 4px;
 }
@@ -485,15 +507,15 @@ a {
     top: 10px;
     right: 15px;
     font-size: 18px;
-    color: #ffc721;
+    color: #ffc514;
 }
 
 .main-category-list-content .item.is-mine .item-head .category-name {
-    color: #fec721;
+    color: #ffc514;
 }
 
 .main-category-list-content .item.is-completed .item-head .category-name {
-    color: #57D59F !important;
+    color: #14e48b !important;
 }
 
 .main-category-list-content .item.is-completed .item-head .category-name:before {
@@ -501,7 +523,7 @@ a {
     font-family: 'Material-Design-Iconic-Font';
     display: inline-block;
     margin-right: 8px;
-    color: #57D59F;
+    color: #14e48b;
     padding-right: 6px;
 }
 
@@ -622,7 +644,7 @@ a {
     margin: 0 auto;
     width: 1200px;
     height: 93%;
-    border-radius: 2px;
+    border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
 }
 
@@ -655,12 +677,12 @@ a {
 }
 
 .editor .editor-tool-bar .action-item:hover {
-    color: #2196F3;
+    color: #0083ff;
     background: #f7f7f7;
 }
 
 .editor .editor-tool-bar .action-item[data-toggle="upload"] {
-    color: #2196f3;
+    color: #0083ff;
 }
 
 .editor .editor-tool-bar .action-item > i {
@@ -672,7 +694,7 @@ a {
     height: 40px;
     line-height: 40px;
     padding: 0 25px;
-    color: #2196F3;
+    color: #0083ff;
 }
 
 .editor .editor-inserter {
@@ -704,7 +726,7 @@ a {
 .editor .editor-inserter .current-book-info {
     margin-right: 10px;
     font-size: 100%;
-    color: #2196F3;
+    color: #0083ff;
     white-space: nowrap;
     word-break: break-all;
 }
@@ -725,7 +747,7 @@ a {
 
 .editor .editor-inserter .current-book-info .numbering:focus {
     outline: none;
-    border-bottom-color: #2196F3;
+    border-bottom-color: #0083ff;
 }
 
 .editor .editor-inserter .pre-book-btn,
@@ -746,13 +768,13 @@ a {
 .editor .editor-inserter .nxt-book-btn:hover,
 .editor .editor-inserter .pre-book-btn:focus,
 .editor .editor-inserter .nxt-book-btn:focus {
-    color: #2196F3;
-    border: 1px solid #2196F3;
+    color: #0083ff;
+    border: 1px solid #0083ff;
 }
 
 .editor .editor-inserter .pre-book-btn:active,
 .editor .editor-inserter .nxt-book-btn:active {
-    background: #2196F3;
+    background: #0083ff;
     color: #FFF;
 }
 
@@ -795,7 +817,7 @@ a {
 }
 
 .editor .editor-inserter .fields-inputs > .form-control:focus {
-    border-color: #2196F3;
+    border-color: #0083ff;
 }
 
 .editor .editor-inserter .input-auto-complete-panel {
@@ -805,10 +827,10 @@ a {
     height: 240px;
     overflow-y: scroll;
     overflow-x: hidden;
-    border-radius: 1px;
+    border-radius: 0 0 3px 3px;
     background: rgba(255, 255, 255, 0.93);
     border: 1px solid #F4F4F4;
-    box-shadow: 0 1px 2px rgba(0,0,0,.035);
+    box-shadow: 0 5px 50px rgba(0, 0, 0, 0.05);
     display: block;
 }
 
@@ -842,20 +864,22 @@ a {
     user-select: none;
     width: 100%;
     padding: 3px 14px;
-    border-bottom: 1px solid #F4F4F4;
-    transition: color .2s;
+    transition: background .2s;
+    border-left: 1px solid transparent;
 }
 
 .editor .editor-inserter .input-auto-complete-panel .panel-option-item:hover {
-    color: #00acf7;
+    background: #FBFBFB;
+    border-left: 1px solid #0083ff;
 }
 
 .editor .editor-inserter .input-auto-complete-panel .panel-option-item.focused {
-    background: #F4F4F4;
+    background: #FBFBFB;
+    border-left: 1px solid #0083ff;
 }
 
 .editor .editor-inserter .input-auto-complete-panel .panel-option-item .highlight {
-    color: #ff5652;
+    color: #ff6f6c;
 }
 
 .editor .editor-book-list {
@@ -878,11 +902,11 @@ a {
 
 
 .editor .editor-book-list .list-content .list-item:hover {
-    color: #2196f3;
+    color: #0083ff;
 }
 
 .editor .editor-book-list .list-content .list-item.edit-focused {
-    color: #2196F3;
+    color: #0083ff;
     box-shadow: 0 1px 2px rgba(0,0,0,.035);
     border: 1px solid #f5f5f5;
 }
@@ -894,7 +918,7 @@ a {
     top: 10px;
     right: 20px;
     font-size: 15px;
-    color: #2196f3;
+    color: #0083ff;
     opacity: .5;
 }
 
@@ -923,7 +947,7 @@ a {
 
 .editor .editor-book-list .list-content .list-item.edit-focused > span.numbering:before,
 .editor .editor-book-list .list-content .list-item > span.numbering:hover:before {
-    color: #2196f3;
+    color: #0083ff;
     position: absolute;
     content: '\f2fb';
     font-family: 'Material-Design-Iconic-Font';
@@ -962,7 +986,7 @@ a {
 }
 
 .editor .editor-book-list .list-content .list-item .item-actions > span:hover {
-    color: #2196F3;
+    color: #0083ff;
     background: #f7f7f7;
 }
 
@@ -1094,7 +1118,7 @@ a {
 }
 
 .dialog-layer .dialog-bottom .dialog-btn {
-    color: #2196f3;
+    color: #0083ff;
     font-weight: 500;
     cursor: pointer;
     border: 0;
@@ -1194,7 +1218,7 @@ a {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.12);
+    background-color: rgba(86, 86, 86, 0.11);
     transition: background 0.15s ease-in-out;
 }
 
@@ -1235,7 +1259,7 @@ a {
 .help-layer-note {
     z-index: 998;
     position: absolute;
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 255, 255, 0.95);
     padding: 12px 20px;
     max-width: 240px;
     margin-left: -7px;
@@ -1424,7 +1448,7 @@ a {
     width: 100%;
     height: 50px;
     border-radius: 4px;
-    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.02);
+    box-shadow: 0 5px 50px rgba(0, 0, 0, 0.05);
     border: 1px solid #efefef;
 }
 
