Admin api method/

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1265,6 +1265,7 @@ a {
 .dialog-layer .dialog-content .danmaku-settings .action-btn:not(:last-child) {}
 
 .dialog-layer .dialog-content .danmaku-settings .action-btn > i {
+    color: #0083ff;
     margin-right: 15px;
 }
 
