--- a/public/css/app.css
+++ b/public/css/app.css
@@ -265,7 +265,7 @@ a {
 .main-login-form .login-submit {
     display: inline-block;
     float: right;
-    height: 35px;
+    /*height: 35px;*/
     line-height: 35px;
     padding: 0 35px;
     border: 1px solid transparent;
